speedtest_final/librespeed-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: final
  labels:
    app.kubernetes.io/instance: librespeed
