speedtest_final/librespeed-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: librespeed-svc
  namespace: final
  labels:
    app.kubernetes.io/instance: librespeed
spec:
  selector:
    app: librespeed
  ports:
    - port: 80
      targetPort: 80
